--- a/src/Components/Style/Home.css
+++ b/src/Components/Style/Home.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     position: relative; 
-    background: #DADADA;
+    background: #FAFAFA;
 }
 
 
@@ -65,7 +65,7 @@ body {
     text-align: right;
     margin-right: -30%;
     font-size: 20pt;
-    margin-top: 11%;
+    margin-top: 10%;
 }
 
 /* section3 */
@@ -82,12 +82,12 @@ body {
     justify-content: center;
     align-items: center;
     margin-top: 1%;
+    margin-left: 2%;
 }
 .box {
     width: 350px; 
-    height: 350px; 
+    height: 360px; 
     border-radius: 25px; 
-    box-shadow: 0px 0 10px -5px #3986D8, 0 5px 10px 1px #3986D8;
     margin: 3%;
     padding: 20px; 
     text-align: justify; 
@@ -119,7 +119,6 @@ img {
     width: 282px;
     margin-left: 72%;
     border-radius: 20px;
-    box-shadow: 0px 0 10px -5px #3986D8, 0 5px 10px 1px #3986D8; 
 }
 input {
     height: 35px;
@@ -129,6 +128,7 @@ input {
     border: transparent;
     border-radius: 20px;
     outline: none;
+    
 }
 .additional-box {
     height: 35px;
@@ -218,7 +218,7 @@ input {
 } 
 .button {
     width: 100%;
-    margin-top: 11.5%;
+    margin-top: 7%;
     padding: 10px 15px; /* Sesuaikan ukuran padding sesuai kebutuhan Anda */
     border-radius: 12px;
     background-color: #3986D8; /* Warna latar belakang tombol */
